# SIYA

./: .env.example  .gitignore  PDF_MEMORY_README.md  README.md  SIYA_CLI_AGENT_PROMPT.md  SIYA_latency_optimization_prompt.md  Users:.fileloc  VANI_DEEP_TECHNICAL_MANUAL.md  VANI_OS_MERGED.md  VaniInterviewPrep.py  docker-compose.yml  download_livekit.bat  fix_numpy_crash.sh  mac_siya.bat  main.py  package-lock.json  patch_vani.py  siya_gemini.sh  siya_native.sh  start.bat  start.sh  startUpCommand.txt  start_desktop.bat  start_local.bat  test.md  test_monitor.py  txt  vani.bat  vani_session.session  vani_working_memory.json
desktop/: main.js  package-lock.json  package.json  preload.js
docs/: CODEBASE_MAP.md  FINANCE_CA_FEATURE.md  INTEGRATE_P0.md  INTEGRATE_P1.md  INTEGRATE_P2.md  INTEGRATE_P3.md  INTEGRATE_P4.md  OVERLAY_AUDIT.md  STRUCTURE_MIGRATION.md  VANI_CAPABILITIES.md  audit.md  docker_setup.md  migrate_livekit.md  ram_gpu_optimizer.md  requirements.md  setup.md  startup_commands.md
modes/: call_mode.txt  cofounder_mode.txt  conversation_mode.txt  core_mode.txt  finance_ca_mode.txt  live_mode.txt  mentor_mode.txt  realtime_mode.txt  security_mode.txt  tool_mode.txt
plugins/: template_plugin.py.example
requirements/: base.txt  livekit.txt  mac.txt  requirements-all.txt  requirements-p0.txt  requirements-p1.txt  requirements-p2.txt  requirements-p3.txt  windows.txt
scratch/: test_indic_tts.py  test_rvc_conversion.py
scripts/: build_dmg.sh  debug_whatsapp.py  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+184 files in other folders)
