[package]
name = "vani"
version = "0.1.0"
description = "Vani OS — Local-first AI assistant"
authors = ["Rudra"]
edition = "2021"

[lib]
name = "vani_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "vani"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2",   features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell           = "2"
tauri-plugin-notification    = "2"
tauri-plugin-fs              = "2"
tauri-plugin-global-shortcut = "2"
serde                        = { version = "1", features = ["derive"] }
serde_json                   = "1"
reqwest                      = { version = "0.12", features = ["json"] }
tokio                        = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
